--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hola
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>index</title>
+</head>
+<body>
+    <p>Hola</p>
+    <p>Texto añadido a posteriori</p>
+</body>
+</html>
